--- a/sponsor-jp.html
+++ b/sponsor-jp.html
@@ -12,11 +12,21 @@
   <body>
     <!--#include virtual="header-jp.html" -->
 <header id="mast">
+<center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
-  <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>　　
-<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>　
-<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>　
-<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a>　<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a>  <nav id="global">
+  <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
+<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
+<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
+<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a><br>
+<a href="http://www.ccf.org.cn/"><img src="images/CCF.png" title="China Computer Federation" width="60"/></a>
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="100"/></a>
+<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="60"/></a>
+<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="80"/></a>
+<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="80"/></a>
+<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="80"/></a>
+<a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="200"/></a>
+
+</center>  <nav id="global">
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
         <li><a href="schedule-jp.html">日程</a></li>
@@ -80,14 +90,48 @@
           <section id="supporters">
             <h3>協賛</h3>
             <p class="smaller">
-              慶應義塾大学 理工学部 情報工学科<br><br>
-              IEEE-Computer Society<br>
-<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a><br><br>
+
+China Computer Federation<br>
+<a href="http://www.ccf.org.cn/"><img src="images/CCF.png" title="China Computer Federation" width="80"/></a><br><br>
+
+慶應義塾大学情報工学科<br><br>
+
+IEEE Computer Society<br>
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="100"/></a><br><br>
+
+IEEE Computer Society Japan Chapter<br><br>
+
+IEEE Japan Office<br>
+<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="80"/></a><br><br>
+
+財団法人 情報科学国際交流財団<br><br>
+
+一般社団法人電子情報技術産業協会<br>
+<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="100"/></a><br><br>
+
+一般社団法人情報サービス産業協会<br>
+<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="100"/></a><br><br>
+
+一般社団法人日本ソフトウェア科学会<br>
+<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="100"/></a><br><br>
+
+一般社団法人日本情報システム・ユーザ協会<br><br>
+
+一般社団法人電子情報通信学会<br><br>
+
+一般社団法人人工知能学会<br><br>
+
+The Korean Institute of Information Scientists and Engineers<br>
+<a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
+
             </p>
           </section>
           <section id="backers">
             <h3>後援</h3>
             <p class="smaller">
+独立行政法人情報処理推進機構<br><br>
+
+
             </p>
           </section>
         </td>
