--- a/software-jp.html
+++ b/software-jp.html
@@ -48,18 +48,24 @@
 	  <h2>ソフトウェア</h2>
       <p>SamurAI 3x3 ゲーム関連のソフトウェアとして、以下のものが公開されています。
       <ul>
-	<li><a href="SamurAImanager-1124.tgz">
+	<li><a href="software/SamurAImanager-1124.tgz">
 	    SamurAI 3x3 ゲームの実行管理システム</a>:
 	  サムライを制御する AI プログラムを呼び出して、ルールにのっとってゲームの進行を管理します。
 	  いくつかの AI プログラムのサンプルも含まれています。
 	  システムやサンプル AI プログラムは C++11 で記述してあります。
 	</li>
-	<li><a href="SamurAI_Visualizer.jar">
+	<li>
+	  C++ 以外の言語で記述したサンプル AI プログラム。
+	  <ul>
+	    <li><a href="software/python2-player-1215.tgz">Python 2</a></li>
+	    <li><a href="software/java-player-1216.tgz">Java</a></li>
+	  </ul>
+	</li>
+	<li><a href="software/SamurAI_Visualizer.jar">
 	    ゲームログの可視化ツール</a>:
 	  実行管理システムが出力するゲームログをグラフィカルに可視化するプログラムです。
 	  このツールは Java で記述してあります。
 	</li>
-	<li>今後、C++ 以外の言語で記述したサンプル AI プログラムも追加する予定です。</li>
       </ul>
     </section>
     <!--#include virtual="footer-jp.html" -->
