--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
+	<li>Dec 16: Sample players in Java and Python 2 are now available in the <a href="software.html">Software</a> page.</li>
       	  <li>Nov 26: <a href="rules.html">Rules</a> and <a href="software.html">Software</a> pages have been updated.
       	  <li>Nov 24: <a href="http://arena.ai-comp.net/">Contest server</a> is opened! Currently, you can only register.
       	  <li>Oct 7: <a href="schedule.html">Schedule</a> has been announced. There will be two chances to advance to the world final. Due date of 1st chance is Jan 8, 2016(TBD). 
