--- a/software.html
+++ b/software.html
@@ -48,21 +48,25 @@
       <p>The following software systems are currently available for
 	the SamurAI 3x3 game.</p>
       <ul>
-	<li><a href="SamurAImanager-1124.tgz">
+	<li><a href="software/SamurAImanager-1124.tgz">
 	    SamurAI 3x3 Game Management System</a>:
 	  Manages a SamurAI 3x3 game according to its rules, invoking
 	  AI programs to control samurai.
 	  Several sample AI programs are also included.
 	  The system and sample programs are written in C++11.
 	</li>
-	<li><a href="SamurAI_Visualizer.jar">
+	<li>Sample AI programs in languages other than C++.
+	  <ul>
+	    <li><a href="software/python2-player-1215.tgz">Python 2</a></li>
+	    <li><a href="software/java-player-1216.tgz">Java</a></li>
+	  </ul>
+	</li>
+	<li><a href="software/SamurAI_Visualizer.jar">
 	    Game Log Visualizer</a>:
 	  Graphical visualizer for game logs output by the game
 	  management system.
 	  This tool is written in Java.
 	</li>
-	<li>More sample AI programs written in languages other than
-	  C++ are in preparation.</li>
       </ul>
     </section>
     <!--#include virtual="footer.html" -->
