--- a/index-jp.html
+++ b/index-jp.html
@@ -232,7 +232,7 @@
 China Computer Federation<br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.png" title="China Computer Federation" width="80"/></a><br><br>
 
-慶應義塾大学情報工学科<br><br>
+慶應義塾大学理工学部情報工学科<br><br>
 
 IEEE Computer Society<br>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="100"/></a><br><br>
