Corrections of sponsor names

--- a/index-jp.html
+++ b/index-jp.html
@@ -253,7 +253,7 @@ IEEE Japan Office<br>
 一般社団法人日本ソフトウェア科学会<br>
 <a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="100"/></a><br><br>
 
-一般社団法人日本情報システム・ユーザ協会<br><br>
+一般社団法人日本情報システム・ユーザー協会<br><br>
 
 一般社団法人電子情報通信学会<br><br>
 
