Corrections of sponsor names

--- a/sponsor-jp.html
+++ b/sponsor-jp.html
@@ -94,7 +94,7 @@
 China Computer Federation<br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.png" title="China Computer Federation" width="80"/></a><br><br>
 
-慶應義塾大学情報工学科<br><br>
+慶應義塾大学理工学部情報工学科<br><br>
 
 IEEE Computer Society<br>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="100"/></a><br><br>
@@ -115,7 +115,7 @@ IEEE Japan Office<br>
 一般社団法人日本ソフトウェア科学会<br>
 <a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="100"/></a><br><br>
 
-一般社団法人日本情報システム・ユーザ協会<br><br>
+一般社団法人日本情報システム・ユーザー協会<br><br>
 
 一般社団法人電子情報通信学会<br><br>
 
