--- a/software-jp.html
+++ b/software-jp.html
@@ -58,7 +58,7 @@
 	  C++ 以外の言語で記述したサンプル AI プログラム。
 	  <ul>
 	    <li><a href="software/python2-player-1215.tgz">Python 2</a></li>
-	    <li><a href="software/java-player-1216.tgz">Java</a></li>
+	    <li><a href="software/java-player-1218.tgz">Java (12月18日更新)</a></li>
 	  </ul>
 	</li>
 	<li><a href="software/SamurAI_Visualizer.jar">
