--- a/software.html
+++ b/software.html
@@ -58,7 +58,7 @@
 	<li>Sample AI programs in languages other than C++.
 	  <ul>
 	    <li><a href="software/python2-player-1215.tgz">Python 2</a></li>
-	    <li><a href="software/java-player-1216.tgz">Java</a></li>
+	    <li><a href="software/java-player-1218.tgz">Java (updated on Dec. 18)</a></li>
 	  </ul>
 	</li>
 	<li><a href="software/SamurAI_Visualizer.jar">
