--- a/index-jp.html
+++ b/index-jp.html
@@ -87,6 +87,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+	<li>12月18日: Java で書いたサンプルプログラムを更新しました。</li>
 	<li>12月16日: Java と Python 2 で書いたサンプルプログラムが <a href="software.html">Software</a> のページにリリースされました。</li>
       	<li>11月26日: <a href="rules.html">ルール</a>と<a href="software.html">ソフトウェア</a>のページを更新しました。
       	<li>11月24日: <a href="http://arena.ai-comp.net/">対戦サーバ</a>を公開しました。今のところアカウント登録のみが可能です。
