Changed CCF logo

--- a/preliminary.html
+++ b/preliminary.html
@@ -89,7 +89,7 @@
       	    <h3>Supporters</h3>
             <p class="smaller">
 China Computer Federation<br>
-<a href="http://www.ccf.org.cn/"><img src="images/CCF.png" title="China Computer Federation" width="80"/></a><br><br>
+<a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="80"/></a><br><br>
 
 Department of Information and Computer Science, Faculty of Science and Technology, Keio University<br>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="60"/></a><br><br>
