--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ aiming to cultivate the younger generation so they can become leading researcher
 </table>
 </p>
 <p>
-    <a href="http://samuraicoding.info/sponsor-jp.html">Call for Sponsors in Japanese</a> is out! Please consider to support this exciting and valuable event!
+    If you are interested in sponsoring SamurAI Coding 2015-16, please contact us at <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">samurai2015-contact@ipsj.or.jp</a>. There are several types of Sponsorship Opportunities: Shogun, Platinum, Gold, Supporter, Prize, and Media. <a href="http://samuraicoding.info/sponsor-jp.html">Call for Sponsors in Japanese</a> is also available. 
 </p>
 
     </section>
