Preliminary round rules, etc.

--- a/index-jp.html
+++ b/index-jp.html
@@ -92,6 +92,10 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+	<li>12月25日:
+	  <a href="preliminary-jp.html">
+	    予選のルールとハードウェア環境を掲載しました。
+	</a></li>
 	<li>12月20日: <a href="flyer1-150311.pdf">参加募集PDF</a> を掲載しました。</li>
 	<li>12月18日: Java で書いたサンプルプログラムを更新しました。</li>
 	<li>12月16日: Java と Python 2 で書いたサンプルプログラムが <a href="software.html">Software</a> のページにリリースされました。</li>
