--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li><a href="software.html">Software</a></li>
         <li><a href="tutorial.html">Tutorial</a></li>
         <li><a href="http://arena.ai-comp.net/">Entry</a></li>
-        <li><a href="preliminary.html">Prelminary</a></li>
+        <li><a href="preliminary.html">Preliminary</a></li>
         <li><a href="final.html">Final</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="index-jp.html">Japanese</a></li>
@@ -97,6 +97,10 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
+	<li>Dec 25:
+	  <a href="preliminary.html">
+	    Preliminary round rules and HW environments announced.
+	</a></li>
 	<li>Dec 18: Java sample player updated.</li>
 	<li>Dec 16: Sample players in Java and Python 2 are now available in the <a href="software.html">Software</a> page.</li>
       	  <li>Nov 26: <a href="rules.html">Rules</a> and <a href="software.html">Software</a> pages have been updated.
