--- a/preliminary-jp.html
+++ b/preliminary-jp.html
@@ -49,7 +49,14 @@
 
     <section id="importantdates">
       <h2>予選</h2>
-    <p>(TBD)</p>
+      <ul>
+	<li><a href="PreliminaryRoundRule-jp.pdf">
+	    予選のルール</a></li>
+	<li><a href="HardwareInfo.html">
+	    予選のハードウェア環境</a></li>
+	<li>予選のソフトウェア環境 (TBD)</li>
+      </ul>
+
     </section>
 
 <footer>
