--- a/HardwareInfo.html
+++ b/HardwareInfo.html
@@ -38,7 +38,7 @@
         <li><a href="software.html">Software</a></li>
         <li><a href="tutorial.html">Tutorial</a></li>
         <li><a href="http://arena.ai-comp.net/">Entry</a></li>
-        <li><a href="preliminary.html">Prelminary</a></li>
+        <li><a href="preliminary.html">Preliminary</a></li>
         <li><a href="final.html">Final</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="index-jp.html">Japanese</a></li>
@@ -48,13 +48,9 @@
 <hr/>
 
    <section id="importantdates">
-      <h2>Preliminary Round</h2>
+      <h2>Hardware Environment of Preliminary Rounds</h2>
       <ul>
-	<li><a href="PreliminaryRoundRule-en.pdf">
-	    Rules of preliminary rounds</a></li>
-	<li><a href="HardwareInfo.html">
-	    Hardwrae environment of the preliminary rounds</a></li>
-	<li>Software environment of the preliminary rounds (TBD)</li>
+	<li>CPU: Intel Xeon E6-2640 2.50GHz</li>
       </ul>
 
 <footer>
