--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
+<a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
 <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a><br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="60"/></a>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="50"/></a>
@@ -79,12 +80,14 @@ aiming to cultivate the younger generation so they can become leading researcher
 <td>e-Seikatsu Co., Ltd.　</td>
 <td>Hitachi, Ltd.　</td>
 <td>Vocal School, Venus　</td>
+<td>Fujitsu Limited　</td>
 <td>GSTYLUS　</td>
 </tr>
 <tr>
 <td><center><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></center></td>
 <td><center><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></center></td>
 <td><center><a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a></center></td>
+<td><center><a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a></center></td>
 <td><center><a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></center></td>
 </tr>
 </table>
@@ -217,10 +220,16 @@ All World Final contestants will be presented on the contest site.
             <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a></p>
           <p>Hitachi, Ltd.<br>
             <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="145"/></a></p>
-            <h3>Supporters and Media Sponsors</h3>
+            <h3>Supporters</h3>
 <p>Vocal School, Venus<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 </p>
+
+<p>Fujitsu Limited<br>
+<a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
+</p>
+
+<h3>Media Sponsors</h3>
             <p>GSTYLUS<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
       	  </section>
