Add Fujitsu on top

--- a/index-jp.html
+++ b/index-jp.html
@@ -73,13 +73,15 @@
 <tr>
 <td>株式会社いい生活　</td>
 <td>株式会社日立製作所　</td>
-<td>ヴォーカル・スクール ヴィーナス　</td>
+<td>ヴォーカル・スクール　<br> ヴィーナス　</td>
+<td>富士通株式会社　</td>
 <td>株式会社ジースタイラス</td>
 </tr>
 <tr>
 <td><center><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></center></td>
 <td><center><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></center></td>
 <td><center><a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a></center></td>
+<td><center><a href="http://www.fujitsu.com/jp/"><img src="images/fujitsu-logo.jpg" width="80"/></a></center></td>
 <td><center><a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></center></td>
 </tr>
 </table>
