Change Due of 1st Call for Challenge

--- a/schedule-jp.html
+++ b/schedule-jp.html
@@ -52,7 +52,7 @@
       <h2>主要日程</h2>
       <ul>
         <li>ルール公開、応募受付開始：2015年10-11月</li>
-        <li>オンライン予選 1次募集締切：2016年1月8日</li>
+<li><font color="red"><b>オンライン予選 1次募集締切：2016年1月12日 AoE（日本時間 13日 19:59）（延長しました）</b></font></li>
         <li>オンライン予選 1次募集結果発表：2016年1月18日頃、9チーム程度選抜（うち3チーム程度は多様性および地域バランス等を考慮した特別選抜枠の予定）</li>
         <li>オンライン予選 2次募集締切：2016年2月8日</li>
         <li>オンライン予選 2次募集結果発表：2016年2月18日頃、9チーム程度選抜（うち3チーム程度は多様性および地域バランス等を考慮した特別選抜枠の予定）</li>
