--- a/schedule.html
+++ b/schedule.html
@@ -52,7 +52,8 @@
       <h2>Important Dates</h2>
       <ul>
       	<li>Rule and platform announcement: Oct-Nov 2015</li>
-        <li>Due of 1st call for challenge of online preliminary round: Jan 8, 2016</li>
+        <li><font color="red"><b>Due of 1st call for challenge of online preliminary round: Jan 12, 2016 AoE (extended)</b></font></li>
+
         <li>Result announcement of 1st call for challenge of online preliminary round: Jan 18, 2016. Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
 </li>
         <li>Due of 2nd call for challenge of online preliminary round: Feb 8, 2016</li>
