--- a/faq-jp.html
+++ b/faq-jp.html
@@ -50,9 +50,25 @@
 
     <section id="importantdates">
       <h2>FAQ</h2>
-      <p>ルールや開催その他について寄せられた質問と回答を掲載する予定です。</p>
+      <p>ルールや開催その他について寄せられた質問と回答を掲載しています。</p>
       <p>質問は <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
           samurai2015-contact@ipsj.or.jp</a> までお寄せください。</p>
+
+<ul>
+<li>Q1.「SamurAI Coding 2015-16 予選ルール」の「2. ゲームの設定」に記述されている時間制限「ゲーム情報に対する最初の応答を 5 秒以内」にコンパイル時間は含まれますか？<br>
+A1. 含まれません。
+</li>
+<li>Q2. 予選1次募集に参加して決勝に選抜されなかったチームは、予選2次募集に参加できますか？
+<br>
+A2. 参加できます。
+
+</li>
+<li>Q3. 決勝に選抜された場合、予選参加時からプログラムを変更できますか？
+<br>
+A3. 変更できます。決勝用のプログラム提出期限を別途設ける予定です。
+
+</li>
+</ul>
     </section>
 
 <footer>
