--- a/faq.html
+++ b/faq.html
@@ -50,8 +50,28 @@
 
    <section id="importantdates">
       <h2>FAQ</h2>
-      <p>Frequent Asked Questions and corresponding answers will be available here.</p>
+      <p>Frequent Asked Questions and corresponding answers are available here.</p>
       <p>If you have any question, please contact us at <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">samurai2015-contact@ipsj.or.jp</a></p>
+
+<ul>
+<li>Q1. Does the rule "The AIs have to respond within 5 seconds" in the 
+"Game Setting" section of the "SamurAI Coding 2015-16 Preliminary Round Rules" 
+include the compilation time?
+<br>
+A1. No.
+</li>
+<li>Q2. Can teams who fail to advance to the World final round at the 1st call for challenge of online preliminary round take part in the 2nd call for challenge of online preliminary round?
+<br>
+A2. Yes.
+
+</li>
+<li>Q3. Can teams change their programs for the World final round after getting through the online preliminary round?
+<br>
+A3. Yes. Due date of the submission for the World final will be set and announced later.
+
+</li>
+</ul>
+
     </section>
 
 <footer>
