--- a/index-jp.html
+++ b/index-jp.html
@@ -95,6 +95,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+<li>1月5日: 寄せられた質問と回答を<a href="faq-jp.html">FAQのページ</a>に掲載しました。ぜひ参照ください。</li>
 <li>1月3日: <font color="red"><b>オンライン予選 1次募集締切を1月12日 AoE（日本時間 13日 19:59）に延長しました！</b></font></li>
 	<li>12月25日:
 	  <a href="preliminary-jp.html">
@@ -117,9 +118,7 @@
 <p>
 年齢制限はありません。どなたでもご参加いただけます。
 個人、またはチーム（メンバー数上限なし）のいずれの形でもご参加いただけます。
-</p>
-
-<p>（詳細は後日掲載予定）
+<a href="http://arena.ai-comp.net/">参加登録サイト</a>からぜひ登録ならびにプログラムを提出ください。
 </p>
     </section>
 
