Python AI updated

--- a/software-jp.html
+++ b/software-jp.html
@@ -61,7 +61,7 @@
 	<li>
 	  C++ 以外の言語で記述したサンプル AI プログラム。
 	  <ul>
-	    <li><a href="software/python2-player-1215.tgz">Python 2</a></li>
+	    <li><a href="software/python2-player-0106.tgz">Python 2 (1月6日更新)</a></li>
 	    <li><a href="software/java-player-1218.tgz">Java (12月18日更新)</a></li>
 	  </ul>
 	</li>
