--- a/software.html
+++ b/software.html
@@ -61,7 +61,7 @@
 	</li>
 	<li>Sample AI programs in languages other than C++.
 	  <ul>
-	    <li><a href="software/python2-player-1215.tgz">Python 2</a></li>
+	    <li><a href="software/python2-player-0106.tgz">Python 2 (updated on Jan. 6)</a></li>
 	    <li><a href="software/java-player-1218.tgz">Java (updated on Dec. 18)</a></li>
 	  </ul>
 	</li>
