--- a/index-jp.html
+++ b/index-jp.html
@@ -95,8 +95,9 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
-<li>1月5日: 寄せられた質問と回答を<a href="faq-jp.html">FAQのページ</a>に掲載しました。ぜひ参照ください。</li>
-<li>1月3日: <font color="red"><b>オンライン予選 1次募集締切を1月12日 AoE（日本時間 13日 20:59 <s>19:59</s>）に延長しました！</b></font></li>
+	<li>1月6日: Python で書いたサンプルプログラムを更新しました。</li>
+	<li>1月5日: 寄せられた質問と回答を<a href="faq-jp.html">FAQのページ</a>に掲載しました。ぜひ参照ください。</li>
+	<li>1月3日: <font color="red"><b>オンライン予選 1次募集締切を1月12日 AoE（日本時間 13日 20:59 <s>19:59</s>）に延長しました！</b></font></li>
 	<li>12月25日:
 	  <a href="preliminary-jp.html">
 	    予選のルールとハードウェア環境を掲載しました。
