Game manager updated

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
+	<li>Jan 6: <a href="software.html">Game manager software</a>
+	  revised.</li>
 	<li>Jan 6: Python sample player updated.</li>
 	<li>Jan 5: Frequent Asked Questions and corresponding answers are now available on the <a href="faq.html">FAQ page</a>. Please look at it.
 	<li>Jan 3: <font color="red"><b>Due of 1st call for challenge of online preliminary round has been extended to Jan 12, 2016 AoE!</b></font></li>
