--- a/software-jp.html
+++ b/software-jp.html
@@ -52,11 +52,14 @@
 	  <h2>ソフトウェア</h2>
       <p>SamurAI 3x3 ゲーム関連のソフトウェアとして、以下のものが公開されています。
       <ul>
-	<li><a href="software/SamurAImanager-1124.tgz">
+	<li><a href="software/SamurAImanager-0106.tgz">
 	    SamurAI 3x3 ゲームの実行管理システム</a>:
 	  サムライを制御する AI プログラムを呼び出して、ルールにのっとってゲームの進行を管理します。
 	  いくつかの AI プログラムのサンプルも含まれています。
-	  システムやサンプル AI プログラムは C++11 で記述してあります。
+	  システムやサンプル AI プログラムは C++11 で記述してあります。<br>
+	  1月6日の更新で AI の指定のしかたなどのインタフェースが変更されました。
+	  詳しくは README.jp を見てください。
+	  従来の版と同じ出力形式のためには -t オプションを指定してください。
 	</li>
 	<li>
 	  C++ 以外の言語で記述したサンプル AI プログラム。
