--- a/software.html
+++ b/software.html
@@ -52,12 +52,16 @@
       <p>The following software systems are currently available for
 	the SamurAI 3x3 game.</p>
       <ul>
-	<li><a href="software/SamurAImanager-1124.tgz">
+	<li><a href="software/SamurAImanager-0106.tgz">
 	    SamurAI 3x3 Game Management System</a>:
 	  Manages a SamurAI 3x3 game according to its rules, invoking
 	  AI programs to control samurai.
 	  Several sample AI programs are also included.
-	  The system and sample programs are written in C++11.
+	  The system and sample programs are written in C++11.<br>
+	  Note: The program interface revised on the release of Jan. 6th.
+	  See the README file for details.
+	  Specify the option -t to obtain the same output format
+	  as the former version.
 	</li>
 	<li>Sample AI programs in languages other than C++.
 	  <ul>
