Re-extend submission due.

--- a/schedule-jp.html
+++ b/schedule-jp.html
@@ -50,12 +50,15 @@
 
     <section id="importantdates">
       <h2>主要日程</h2>
-       <ul>
+      <ul>
         <li>ルール公開、応募受付開始：2015年10-11月</li>
-        <li>オンライン予選 1次募集締切：システムのメンテナスの実施等のため，一次募集の締切を少なくとも3週間以上延長する予定です．二次募集を含む詳細な日程は決定次第お知らせします．</li>
-        <li>オンライン予選 1次募集結果発表：（近日掲載）9チーム程度選抜（うち3チーム程度は多様性および地域バランス等を考慮した特別選抜枠の予定）</li>
-        <li>オンライン予選 2次募集締切：（近日掲載）</li>
-        <li>オンライン予選 2次募集結果発表：（近日掲載）9チーム程度選抜（うち3チーム程度は多様性および地域バランス等を考慮した特別選抜枠の予定）</li>
+<font color="red"><b>
+        <li>オンライン予選 1次募集締切：2016年2月8日 AoE（日本時間 2月9日 20:59）システムのメンテナンスの実施に伴い延長しました</li>
+        <li>オンライン予選 1次募集結果発表：2016年2月12日（予定）9チーム程度選抜（うち3チーム程度は多様性および地域バランス等を考慮した特別選抜枠の予定）</li>
+        <li>オンライン予選 2次募集締切：2016年2月22日 AoE（日本時間 2月23日 20:59）システムのメンテナスの実施に伴い延長しました
+</li>
+        <li>オンライン予選 2次募集結果発表：2016年2月26日（予定）9チーム程度選抜（うち3チーム程度は多様性および地域バランス等を考慮した特別選抜枠の予定）</li>
+</b></font>
         <li>決勝（於 慶應義塾大学） 　　：2016年3月11日　※<a href="http://www.ipsj.or.jp/event/taikai/78">情報処理学会第78回全国大会併催</a></li>
       </ul>
     </section>
