--- a/schedule.html
+++ b/schedule.html
@@ -52,13 +52,14 @@
       <h2>Important Dates</h2>
       <ul>
       	<li>Rule and platform announcement: Oct-Nov 2015</li>
-        <li>Due of 1st call for challenge of online preliminary round: 
-Due to frequent problems with the contest server, we will extend the deadline of submission for the first preliminary round for at least three weeks.  Exact dates, including the schedule of the second preliminary round, are to be announced soon. </li>
-        <li>Result announcement of 1st call for challenge of online preliminary round: (TBD) Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
+<font color="red"><b>
+        <li>Due of 1st call for challenge of online preliminary round: Feb 8, 2016 AoE</li>
+        <li>Result announcement of 1st call for challenge of online preliminary round: Feb 12, 2016 (TBD). Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
 </li>
-        <li>Due of 2nd call for challenge of online preliminary round: (TBD)</li>
-        <li>Result announcement of 2nd call for challenge of online preliminary round: (TBD) Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
+        <li>Due of 2nd call for challenge of online preliminary round: Feb 22, 2016 AoE</li>
+        <li>Result announcement of 2nd call for challenge of online preliminary round: Feb 26, 2016 AoE (TBD). Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
 </li>
+</b></font>
         <li>World final round in Yokohama (collocated with 78th IPSJ National Convention at <a href="http://www.keio.ac.jp/en/maps/yagami.html">Keio University, Yagami Campus</a>): March 11, 2016</li>
       </ul>
     </section>
