--- a/tutorial-jp.html
+++ b/tutorial-jp.html
@@ -14,9 +14,10 @@
 <header id="mast">
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
-  <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
+  <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
 <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
+<a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 <a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
 <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a><br>
@@ -53,6 +54,7 @@
 <p>(TBD)</p>
     </section>
 
+<hr/>
 <footer>
   <div>
     <table class="multicolumn">
@@ -73,6 +75,9 @@
             <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
 <p>株式会社日立製作所<br>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></p>
+
+<p>株式会社レコチョク<br>
+<a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a></p>
 
             <h3>サポーター</h3>
 <p>ヴォーカル・スクール ヴィーナス<br>
