Updated FAQ about timeout issue.

--- a/faq-jp.html
+++ b/faq-jp.html
@@ -69,6 +69,11 @@ A2. 参加できます。
 A3. 変更できます。決勝用のプログラム提出期限を別途設ける予定です。
 
 </li>
+<li>Q4. 手元のローカルの実行環境ではタイムアウトはまず起きないプログラムについても、
+サーバ上の対戦時に時々1ターン目でタイムアウトが発生しています。
+<br>
+A4. 現在調査中ですが、予選において不公平の生じないように、タイムアウトの各ケースについて可能な範囲で留意して対応する予定です。
+</li>
 </ul>
     </section>
 
