--- a/faq.html
+++ b/faq.html
@@ -70,7 +70,7 @@ A2. Yes.
 <br>
 A3. Yes. Due date of the submission for the World final will be set and announced later.
 <li>Q4. Sometimes my program encouters "Timeout" at the 1st turn on the server, although the program does not fail to meet the time limit in my local environment. <br>
-A4. The issue is under investingation. 
+A4. The issue is under investigation. 
 During the preliminary round, 
 we will try to carefully address each case of "Timeout" in consideration of fairness. 
 </li>
