Added news: 1st challenge has been over.

--- a/index-jp.html
+++ b/index-jp.html
@@ -97,6 +97,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+<li>2月9日: オンライン予選1次募集を日本時間 2月9日 21:59をもって締め切りました。結果発表は2月12日を予定しています。
 <li>2月9日: タイムアウトの現象に関して<a href="faq-jp.html">FAQのページ</a>を更新しました。
 <li>1月27日: コンテストシステムへのAI投稿の受付を再開しました！何か問題にお気づきの方がいらっしゃいましたら、samurai2015-contact@ipsj.or.jp までご連絡ください。</li>
 <li>1月15日: システムのメンテナスの実施に伴い、オンライン予選 1次募集締切を 2016年2月8日 AoE（日本時間 2月9日 20:59）に延長しました。なお、日本時間 1月15日現在ではシステムのメンテナンスを実施途中です。</li>
