--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
-<li>Feb 9 AoE: <a href="faq.html">FAQ page</a> has been updated about "timeout" issue. 
+<li>Feb 9: 1st call for challenge of online preliminary round has been over. The result will be announced on Feb 12. (TBD)</li>
+<li>Feb 8 AoE: <a href="faq.html">FAQ page</a> has been updated about "timeout" issue. 
 <li>Jan 26 AoE: The contest system is now accepting your AI program submissions! If you have any further problem, let us know it at samurai2015-contact@ipsj.or.jp
 <li>Jan 14 AoE: Due to the necessity of the system maintenance, due of 1st call for challenge of online preliminary round has been extended to Feb 8, 2016 AoE! As of Jan 14 AoE, the system is still under maintenance.</li>
 <li>Jan 12 AoE: 
