--- a/final-jp.html
+++ b/final-jp.html
@@ -18,8 +18,10 @@
 <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
+<a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a><br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 <a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
+<a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a><br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="60"/></a>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="50"/></a>
@@ -62,7 +64,7 @@
         <td width="250">
           <section id="contact">
             <h3>情報処理学会</h3>
-            <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
+            <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 4階</p>
             <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
           samurai2015-contact@ipsj.or.jp</a></p>
           <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
@@ -79,6 +81,11 @@
 <p>株式会社レコチョク<br>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a></p>
 
+<p>TIS株式会社<br>
+<a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
+</p>
+
+
             <h3>サポーター</h3>
 <p>ヴォーカル・スクール ヴィーナス<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
@@ -86,6 +93,10 @@
 
 <p>富士通株式会社<br>
 <a href="http://www.fujitsu.com/jp/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
+</p>
+
+<p>クレイ・ジャパン・インク<br>
+<a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 </p>
 
 <h3>メディアスポンサー</h3>
@@ -139,8 +150,8 @@ The Korean Institute of Information Scientists and Engineers<br>
             <h3>後援</h3>
             <p class="smaller">
 独立行政法人情報処理推進機構<br><br>
-
-
+経済産業省<br><br>
+文部科学省
             </p>
           </section>
         </td>
