--- a/index-jp.html
+++ b/index-jp.html
@@ -18,8 +18,10 @@
 <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
+<a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a><br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 <a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
+<a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a><br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="60"/></a>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="50"/></a>
@@ -69,21 +71,29 @@
     <section id="sponsors">
     <h2>スポンサー＆サポーター</h2>
 <p>
-<table cellpadding="10">
+<table cellpadding="10" align="center">
 <tr align="center">
-<td>株式会社<br>いい生活</td>
-<td>株式会社<br>日立製作所</td>
-<td>株式会社<br>レコチョク</td>
-<td>ヴォーカル・スクール<br> ヴィーナス　</td>
-<td>富士通<br>株式会社</td>
-<td>株式会社<br>ジースタイラス</td>
+<td>株式会社いい生活</td>
+<td>株式会社日立製作所</td>
+<td>株式会社レコチョク</td>
+<td>TIS株式会社</td>
 </tr>
 <tr>
 <td><center><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></center></td>
 <td><center><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></center></td>
 <td><center><a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a></center></td>
+<td><center><a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a></center></td>
+</tr>
+<tr align="center">
+<td>ヴォーカル・スクールヴィーナス</td>
+<td>富士通株式会社</td>
+<td>クレイ・ジャパン・インク</td>
+<td>株式会社ジースタイラス</td>
+</tr>
+<tr>
 <td><center><a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a></center></td>
 <td><center><a href="http://www.fujitsu.com/jp/"><img src="images/fujitsu-logo.jpg" width="80"/></a></center></td>
+<td><center><a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a></center></td>
 <td><center><a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></center></td>
 </tr>
 </table>
@@ -233,7 +243,7 @@
         <td width="250">
           <section id="contact">
             <h3>情報処理学会</h3>
-            <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
+            <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 4階</p>
             <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
           samurai2015-contact@ipsj.or.jp</a></p>
           <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
@@ -250,6 +260,11 @@
 <p>株式会社レコチョク<br>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a></p>
 
+<p>TIS株式会社<br>
+<a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
+</p>
+
+
             <h3>サポーター</h3>
 <p>ヴォーカル・スクール ヴィーナス<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
@@ -257,6 +272,10 @@
 
 <p>富士通株式会社<br>
 <a href="http://www.fujitsu.com/jp/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
+</p>
+
+<p>クレイ・ジャパン・インク<br>
+<a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 </p>
 
 <h3>メディアスポンサー</h3>
@@ -310,8 +329,8 @@ The Korean Institute of Information Scientists and Engineers<br>
             <h3>後援</h3>
             <p class="smaller">
 独立行政法人情報処理推進機構<br><br>
-
-
+経済産業省<br><br>
+文部科学省
             </p>
           </section>
         </td>
